--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@stomp/stompjs": "^7.0.0",
     "flowbite": "^2.2.0",
     "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,6 +33,8 @@
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
